--- a/PostgresqlDatabase/src/main/resources/application.properties
+++ b/PostgresqlDatabase/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=PostgresqlDatabase
+
+
+#spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=password
+#spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5433/mydb
+spring.datasource.username=myuser
+spring.datasource.password=mypassword
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
